<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculator</string>
    <string name="tvResult"> </string>
    <string name="btnbackspace">backspace</string>
    <string name="btnCE">CE</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnDiv">/</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnMul">*</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnAdd">+</string>
    <string name="btn0">0</string>
    <string name="btnC">C</string>
    <string name="btnEqu">=</string>
    <string name="btnSub">-</string>
    <string name="create_database">create_db</string>
    <string name="update_database">update_db</string>
     <string name="insert">insert</string>
    <string name="update">update</string>
    <string name="query">query</string>
    <string name="delete">delete</string>
</resources>
